# SynthSplat-

./: .gitignore  README.md  run_pipeline.py
renderer/: CMakeLists.txt
renderer/shaders/: background.frag  background.vert  pbr.frag  pbr.vert  sky.frag  sky.vert
renderer/src/: Camera.cpp  Camera.h  MultiScene.cpp  MultiScene.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  glad.c  main.cpp
renderer/src/glad/: glad.h
trainer/: SynthSplat_Colab.ipynb  dataset.py  evaluate.py  export_ply.py  requirements.txt  train.py  training_log.csv
